--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.50",
     "dotenv": "^17.2.2",
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "jose": "^6.1.0",
     "js-cookie": "^3.0.5",
@@ -56,6 +58,7 @@
     "@storybook/nextjs-vite": "^9.1.3",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/bcrypt": "^6.0.0",
+    "@types/formidable": "^3.4.5",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.13",
